# LEXIS

./: .gitignore  README.md  create_pdf.py  docker-compose.yml  lexis_foundation_colab.ipynb  pyproject.toml  test_dependency_injection.py  test_phase_4a_api.py  test_phase_4a_citations.py
docs/: ADR.md
notebooks/: master_e2e_validation.ipynb  phase_4a_validation.ipynb
scripts/: setup_collections.py
src/lexis/: config.py
src/lexis/cache/: base.py  redis_cache.py
src/lexis/evaluation/: cost_ledger.py  failure_analyzer.py  generate_dataset.py  harness.py  metrics.py  nli_checker.py  ragas_eval.py  retrieval_benchmark.py  run_eval.py
src/lexis/generation/: citation_verifier.py  context_assembler.py  crag_router.py  decoding.py  prompts.py  synthesizer.py  trust_scorer.py  trusted_sources.yaml
src/lexis/indexing/: document_service.py  es_client.py  pg_client.py  qdrant_client.py  raptor.py  schema.py
src/lexis/ingestion/: chunker.py  embedder.py  feature_extractor.py  hype_generator.py  interfaces.py  parser.py  pipeline.py  proposition_extractor.py
src/lexis/metadata/: canonicalizer.py  extractor.py  filter.py  registry.yaml  schema.py
src/lexis/reranking/: cross_encoder.py  interfaces.py  lost_in_middle.py  map_reduce_filter.py  sentence_window.py
src/lexis/retrieval/: adapters.py  complexity_classifier.py  confidence_calibration.py  confidence_scorer.py  engine.py  fusion.py  hybrid_retriever.py  interfaces.py  path_a_cluster.py  path_b_global.py  path_c_concept.py  path_d_bm25.py  query_decomposer.py  reranker.py
tests/: eval_baseline.py
(+14 files in other folders)
