[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lexis"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    # Infrastructure
    "qdrant-client>=1.9.0",
    "elasticsearch<9.0.0,>=8.13.0",
    "redis>=5.0.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "prometheus-client>=0.20.0",

    # ML / Retrieval
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",

    # Document parsing
    "unstructured[pdf]>=0.14.0",

    # LLM clients
    "groq>=0.9.0",
    "google-generativeai>=0.5.4",
    "litellm>=1.0.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Utilities
    "httpx>=0.27.0",
    "numpy>=1.26.0",

    # Evaluation
    "datasets>=2.19.0",
    "ragas>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "locust>=2.28.0",
]
